changed hamburger logo icon to be more visible/fixed centering issues in mobile view/fixed filepaths/removed commented code

--- a/css/styles.css
+++ b/css/styles.css
@@ -316,10 +316,21 @@ ul {
     left: -120px; }
     .container #logo {
       width: 4rem; }
+    .container .navbar-toggler {
+      border: 3px solid red;
+      position: relative;
+      left: -20%; }
+    .container .navbar-toggler-icon {
+      background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='red' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e"); }
+    .container .navbar-toggler {
+      border: 2px solid red; }
     .container .navbar-brand {
       position: relative;
       left: -16%;
       top: 5%; }
+    .container .navbar-collapse {
+      position: relative;
+      left: 14%; }
   .page-message {
     position: relative;
     margin: 1rem;
@@ -345,7 +356,7 @@ ul {
   .legal-btn {
     position: relative;
     left: -20%;
-    top: 20%; }
+    top: 9rem; }
   .legal-main img {
     width: 65%;
     left: 18%; }
@@ -355,9 +366,13 @@ ul {
     .careers-splash img {
       width: 95%;
       left: 3%; }
+  .careers-main img {
+    position: relative;
+    left: 2%; }
   .cv-btn {
     left: 40%;
-    top: 1%; }
+    top: 1%;
+    margin-bottom: 2rem; }
   /* MERCH MQ */
   .product-grid {
     display: grid;
